#423 Fixes issue where not biggest fleet might not be the defender.
If defending fleet had cloaking device but for example trade fleet did
not have trader was assigned for defending.